# zodchy-patterns

./: README.md  pyproject.toml
zodchy_patterns/: __init__.py  mapping.py
zodchy_patterns/events/: __init__.py  http.py
zodchy_patterns/events/io/: error.py  generic.py  info.py
