[tool.poetry]
name = "zodchy-patterns"
version = "0.3.1"
description = "Collection of patterns to use in CQRS applications"
authors = ["Smairon <man@smairon.ru>"]
readme = "README.md"
repository = "https://github.com/smairon/zodchy-patterns"
packages = [{ include = "zodchy_patterns" }]

[tool.poetry.dependencies]
python = "^3.11"
zodchy = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"