[tool.poetry]
name = "zodchy-patterns"
version = "0.3.2"
description = "Collection of patterns to use in CQRS applications"
authors = ["Smairon <man@smairon.ru>"]
readme = "README.md"
repository = "https://github.com/smairon/zodchy-patterns"
packages = [{ include = "zodchy_patterns" }]

[tool.poetry.dependencies]
python = "^3.11"
zodchy = "^0.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
mypy= "^1.11.1"

[tool.mypy]
disable_error_code = "import-untyped"